# exptxxv

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  proj  xxvb
examples/: main.xxv
xxvc/: CMakeLists.txt
xxvc/src/: codegen.mpp  compiler.mpp  lexer.mpp  main.cpp  nodes.cpp  nodes.mpp  parser.mpp  printer.mpp  tokens.cpp  tokens.mpp  types.mpp
